# PrimateFace_os

./: .gitignore  CHANGELOG.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  requirements-docs.txt
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_contribution.md  feature_request.md
.github/workflows/: deploy-docs.yml
dataset/: README.md
demos/: README.md  __init__.py  classify_genus.py  constants.py  demo_docs.md  download_models.py  primateface_demo.py  process.py  smooth_utils.py  test_demos.py  visualize_coco_annotations.py  viz_utils.py
demos/notebooks/: App1_Lemur_time_stamping.ipynb  App4_Gaze_following.ipynb  README.md
dinov2/: README.md  __init__.py  constants.py  core.py  dinov2_cli.py  dinov2_docs.md  selection.py  test_dinov2.py  utils.py  visualization.py
docs/: CNAME  DOCUMENTATION_REVIEW.md  FINAL_REVIEW_CHECKLIST.md  contribute.md  data.md  index.md  models.md  paper.md  plan.md  troubleshooting.md
docs/api/: annotation.md  converter.md  demos.md  detection.md  dinov2.md  evaluation.md  gui.md  index.md  pose.md
docs/data-models/: index.md
docs/frameworks/: index.md
docs/getting-started/: decision-tree.md  index.md  quickstart.md
docs/gradio/: gradio_face_detector_server.py  primateface_server.py
docs/guides/: index.md
docs/installation/: index.md
docs/tools/: index.md
docs/tutorials/: index.md
docs/user-guide/: concepts.md
docs/user-guide/core-workflows/: demos.md  dinov2.md  gui.md  index.md  landmark-converter.md
docs/user-guide/framework-integration/: deeplabcut.md  index.md  mmpose-mmdetection.md  sleap.md  ultralytics.md
docs/user-guide/utilities/: data-processing.md  evaluation.md  index.md  visualization.md
evals/: README.md  __init__.py  compare_det_models.py  compare_pose_models.py  constants.py  eval_docs.md  eval_genera.py  plot_genus_distribution.py  test_evals.py  visualize_eval_results.py
evals/core/: __init__.py  metrics.py  models.py  visualization.py
evals/dlc/: README.md  evaluate_nme.py  train_with_coco.py
evals/sleap/: README.md  evaluate_sleap_nme.py  train_sleap_with_coco.py
gui/: MIGRATION_CHECKLIST.md  README.md  __init__.py  constants.py  gui_docs.md  keypoint_definitions.yml  pseudolabel.py  test_gui.py  utils.py
gui/converters/: __init__.py  base.py  image.py  video.py
gui/core/: __init__.py  detectors.py  models.py  pose.py  sam.py
landmark-converter/: README.md  apply_model.py  constants.py  converter_docs.md  test_landmark_converter.py  train.py
landmark-converter/models/: train_AE.py  train_AttentionMLP.py  train_ConverterMLP.py  train_GNN.py  train_MinimalMLP.py  train_SimplerLinearConverter.py
landmark-converter/src/: models.py  training_pipeline.py
landmark-converter/utils/: data_splitting_utils.py  data_utils.py  parser_utils.py  train_utils.py
